update alias and prettier updates

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 
 @theme {
     --color-active-light: #7b61ff80;
-    --color-active-dark: #7b61ff80;
+    --color-active-dark: #7b61ff;
     --color-secondary: #bac6fc;
     --color-square-light: #f4f7fa;
     --color-square-dark: #b7c0d8;
