--- a/src/index.css
+++ b/src/index.css
@@ -31,8 +31,8 @@
         content: "";
         background-color: var(--color-active-light);
         position: absolute;
-        width: 1rem;
-        height: 1rem;
+        width: 4%;
+        height: 4%;
         border-radius: 100%;
     }
 }
